{
    "name": "InventoryControls",
    "maps": [
        {
            "name": "InventoryActions",
            "id": "c50ec0f1-b298-4bf8-a34d-d72c0db2bfa8",
            "actions": [
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "e8423db8-c250-4c6c-bbe6-296b7fa9cfc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SplitItemHalf",
                    "type": "Button",
                    "id": "29a7c270-ab5f-4e2e-a76a-afa7d6e18c8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SplitItemOne",
                    "type": "Button",
                    "id": "6edc1485-e5af-4812-993b-2316dcdc567c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipItem",
                    "type": "Button",
                    "id": "8b6bc487-3a7c-49d1-9410-e878ed7641a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47ac2009-5709-4c78-a1fe-c5c6c7f786cb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abf1000e-7f41-4125-8c11-f9cb1090cb38",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SplitItemHalf",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b43f13b2-d518-4547-9a62-dd396f43f78a",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SplitItemOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ShiftClick",
                    "id": "0b568bc5-0c18-453a-a6ed-f90d1338e4fb",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipItem",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "554d6844-da8c-4784-8b82-fba3d0acc440",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipItem",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "4be7a30b-75a0-4745-8d51-fdaa05fc136c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipItem",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}